Fix overflow & underflow issues in compact mode. Minor cleanup.

--- a/applications/armored-chat/index.scss
+++ b/applications/armored-chat/index.scss
@@ -107,15 +107,14 @@ body {
             img {
               width: auto;
               height: 100%;
-
-              // max-width: 400px;
-              // max-height: 300px;
             }
           }
         }
 
         .embeds {
           width: 100%;
+          word-wrap: anywhere;
+          overflow-x: hidden;
 
           overflow-x: hidden;
           a {
@@ -128,8 +127,6 @@ body {
             max-height: 300px;
 
             img {
-              // width: auto;
-              // height: 100%;
               max-width: 400px;
               max-height: 300px;
             }
